2004-10-08  Stepan Kasal  <kasal@ucw.cz>

	Support cross compiling.  Based on research by Mark Fortescue.
	Maciej W. Rozycki pointed out this issue previously.

	* configure.ac: If cross compiling, run second configure script
	  in a subdirectory ${native_tools}.  New automake conditional
	  TOOLS_ONLY is set inside that subdirectory.
	* Makefile.am (SUBDIRS): Add $(native_tools); restrict the
	  SUBDIRS to minimum, if we are inside the $(native_toos) dir.
	(distclean-local): Remove directory $(native_tools).
	* doc/Makefile.am: If necessary, use makeinfo and install-info
	  from $(native_tools).
	* info/Makefile.am: Similarily with the ``makedoc'' program.

2004-10-07  Stepan Kasal  <kasal@ucw.cz>

	@table command doesn't work inside environment @display.
	There is no point in trying to fix it: just give up with a cry.

	* doc/texinfo.tex (\table, \ftable, \vtable): Instead of calling
	  \tablex directly, call ...
	(\tablecheck): ... this new macro which checks for active newline;
	  if it's found, it reports an error and uses \doignore to recover.
	* doc/texinfo.txi (display): mention this.

2004-10-06  Karl Berry  <karl@gnu.org>

	* doc/*.texi: more consistent use of dashes.
	From Stepan and Benno Schulenberg <benno@nietvergeten.nl>.
 
2004-10-04  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (cm_value): increment and restore
		input_text_offset before execute_string on the value,
		so cm_xref doesn't complain about missing punctuation.
	From: Sergey Poznyakoff <gray@Mirddin.farlep.net>,
	04 Oct 2004 15:04:33 +0300.

2004-10-01  Karl Berry  <karl@gnu.org>

	* lib/Makefile.am (libtxi_a_SOURCES): add getopt_.h.

	* configure.ac: bump version to 4.7.90, although we're not really
		pretesting yet.  (I need a distribution to check an
		automake issue.)

2004-09-14  Karl Berry  <karl@gnu.org>

	* util/srclist.txt (getopt.h): renamed to getopt_.h.
	* lib/getopt_.h: new file.
	* lib/getopt.h: just include getopt.h.

2004-09-09  Karl Berry  <karl@gnu.org>
